src/test/deca/syntax/invalid/obtained_res/OpPlusEgalsynt.res
./src/test/deca/syntax/invalid/created/testOpArith/OpPlusEgal.deca:11:7: extraneous input '=' expecting {'(', 'new', 'this', 'readFloat', 'readInt', 'null', 'true', 'false', '-', '!', IDENT, INT, FLOAT, STRING}
